# pyms-agilent-stubs

./: .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  builder_requirements.txt  formate.toml  lint_roller.sh  make_stubs.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml
Agilent-stubs/: __init__.pyi
Agilent-stubs/MassSpectrometry/: DataAnalysis.pyi
