[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "pyms-agilent-stubs"
version = "0.0.0"
description = "Stubs package for pyms-agilent .NET components."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/PyMassSpec/pyms-agilent-stubs"
"Issue Tracker" = "https://github.com/PyMassSpec/pyms-agilent-stubs/issues"
"Source Code" = "https://github.com/PyMassSpec/pyms-agilent-stubs"

[tool.importcheck]
